<resources>
    <string name="app_name">Lost But Found</string>

    <!--recuperation de text long en ecrivant ceci on peut une performance sur les phrases ou les mots-->
    <string name="logo_desc"></string>
    <!-- Login Page -->
    <string name="welcome_back">Bienvenue!</string>
    <string name="login">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="logo_description">App Logo</string>

    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="icon_description">Image de l\'objet perdu</string>



    <!-- Sign Up Text -->
    <string name="don_t_have_an_account_sign_up">Vous n\'avez pas de compte ? inscrivez-vous</string>
    <string name="already_have_an_account_login">Vous avez un compte? connectez-vous</string>
    <string name="register">Inscription</string>
    <string name="username">Nom et Prenom</string>
    <string name="create_an_account">Creer une compte</string>
    <string name="welcome_to_lbf">Bienvenue dans LBF</string>
    <string name="search">Rechercher un Objet Perdu</string>
    <string name="account">Mon Compte</string>
    <string name="objet">Signaler un Objet Trouvé</string>
    <string name="longitude">Longitude</string>
    <string name="headObjects">Récupération des Objets Perdus</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="rechercher_un_objet_perdu_poster_par_moi_m_me">Rechercher un Objet Perdu Poster par moi-même</string>
    <string name="rechercher_un_objet_perdu">Rechercher un Objet Perdu</string>
    <string name="forgot_password">Mot de passe oublie?</string>
    <string name="mes_objets_trouves"> Mes objets trouvés</string>
    <string name="lost_but_found"> Lost But Found </string>

    <string name="forgot_password_title">Réinitialiser le mot de passe</string>
    <string name="send_otp">Envoyer OTP</string>
    <string name="otp">Entrez l\'OTP</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="reset_password">Réinitialiser le mot de passe</string>
    <string name="back_to_login">Retour à la connexion</string>

</resources>