<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <!-- Logo de l'application -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/logo_description"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="24dp"/>

        <!-- Email -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/a0aabf"
            android:inputType="textEmailAddress"
            android:importantForAccessibility="yes"
            android:elevation="4dp"
            android:drawableLeft="@drawable/ic_email_24"/>

        <!-- Bouton pour envoyer l'OTP -->
        <Button
            android:id="@+id/sendOtpButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="#388E3C"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:elevation="6dp"/>

        <!-- Retour au login -->
        <TextView
            android:id="@+id/backToLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/back_to_login"
            android:textColor="@color/a0aabf"
            android:textSize="14sp"
            android:textStyle="italic"/>
    </LinearLayout>
</ScrollView>
