<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <!-- Logo de l'application -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/logo_description"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="24dp"/>

        <!-- Champ OTP -->
        <EditText
            android:id="@+id/otpEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/otp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/a0aabf"
            android:importantForAccessibility="yes"
            android:elevation="4dp"
            android:drawableLeft="@drawable/ic_lock_24"/>

        <!-- Nouveau mot de passe -->
        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/new_password"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/a0aabf"
            android:inputType="textPassword"
            android:importantForAccessibility="yes"
            android:elevation="4dp"
            android:drawableLeft="@drawable/ic_lock_24"/>

        <!-- Confirmer le mot de passe -->
        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/confirm_password"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/a0aabf"
            android:inputType="textPassword"
            android:importantForAccessibility="yes"
            android:elevation="4dp"
            android:drawableLeft="@drawable/ic_lock_24"/>

        <!-- Bouton pour réinitialiser le mot de passe -->
        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:elevation="6dp"/>

    </LinearLayout>
</ScrollView>
